<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context="com.akaya.apps.smartnightlantern.SettingsActivity">

    <LinearLayout
        android:id="@+id/lay_bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/restore"
            android:background="@drawable/button_selector"
            android:textColor="@color/myWhite"
            android:id="@+id/btn_restore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/myWhite"
            android:background="@drawable/button_selector"
            android:layout_weight="1"
            android:text="@string/start"
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <ScrollView
        android:layout_above="@id/lay_bottom"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:background="@color/myDarkGreen"
                android:textColor="@color/white"
                android:text="Screen"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="16dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <SeekBar
                    android:id="@+id/sb_brightness"
                    android:layout_weight="3"
                    android:progress="80"
                    android:secondaryProgress="80"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:weightSum="7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/cb_color_clock"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/color_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_weight="2"
                    android:weightSum="1"
                    android:background="@drawable/bg_trans"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/screen_color"
                        android:layout_weight="1"
                        android:id="@+id/btn_color"
                        android:background="#00FF00"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:paddingTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/cb_sleep"
                        android:layout_weight="1"
                        android:textColor="@color/myDarkGreen"
                        android:text="@string/sleep"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/tv_sleep_time"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="2 hours 32 minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <SeekBar
                    android:max="119"
                    android:progress="9"
                    android:secondaryProgress="9"
                    android:id="@+id/sb_sleep_time"
                    android:indeterminate="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_awake_via_motion"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/awake_screen_via_motion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:paddingTop="16dp"-->
                <!--android:weightSum="4"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<CheckBox-->
                    <!--android:layout_weight="1"-->
                    <!--android:id="@+id/cb_awake_via_sound"-->
                    <!--android:textColor="@color/myDarkGreen"-->
                    <!--android:text="@string/awake_screen_via_sound"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent" />-->
                <!--<LinearLayout-->
                    <!--android:padding="5dp"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<TextView-->
                        <!--android:text="@string/awake_sound_level"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="match_parent" />-->
                    <!--<SeekBar-->
                        <!--android:secondaryProgress="50"-->
                        <!--android:progress="50"-->
                        <!--android:layout_weight="3"-->
                        <!--android:id="@+id/sb_sound_level"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="match_parent" />-->
                <!--</LinearLayout>-->
            <!--</LinearLayout>-->
            <TextView
                android:background="@color/myDarkGreen"
                android:textColor="@color/white"
                android:text="@string/show"
                android:padding="5dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_digital_clock"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/digital_clock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_sms"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/sms"
                    android:checked="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_missed_calls"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/missed_calls"
                    android:checked="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:paddingTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_battery"
                    android:textColor="@color/myDarkGreen"
                    android:text="@string/battery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
